# CAD-Algo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
core/curves/: bezier_curve.cpp  bezier_curve.hpp  bspline_curve.cpp  bspline_curve.hpp  nurbs_curve.cpp  nurbs_curve.hpp
core/math/: point.cpp  point.hpp
core/surfaces/: bezier_surface.cpp  bezier_surface.hpp
docs/: chapter1_algorithms.md
examples/: ex_bezier_decasteljau.cpp  ex_bspline_curve.cpp  ex_nurbs_curve.cpp
scripts/: setup.sh  vsconfig.json
viewer/: curve_renderer.cpp  curve_renderer.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
viewer/shaders/: basic.vert
